sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:6: error: type mismatch;
 found   : Int
 required: Boolean
  while (ecart>1 ||c==) {
                   ^